--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,9 @@
   "crons": [{
     "path": "/api/cron",
     "schedule": "5 0 * * *"
+  },
+  {
+    "path": "/api/cron",
+    "schedule": "0 */3 * * *"
   }]
 }
